Added method_source gem.

--- a/installer/Gemfile
+++ b/installer/Gemfile
@@ -11,4 +11,5 @@ group :development do
   gem "simplecov-rcov", "~> 0.2.0"
   gem "rubocop", "~> 0.18.1"
   gem "pry", "~> 0.9"
+  gem "method_source"
 end
