--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/skk/dotbot.git
+[submodule "spacemacs"]
+	path = spacemacs
+	url = git@github.com:syl20bnr/spacemacs.git
+[submodule "spf13-vim"]
+	path = spf13-vim
+	url = git@github.com:spf13/spf13-vim.git
