Updates to procmail rules

--- a/procmail/home/bills.rc
+++ b/procmail/home/bills.rc
@@ -2,17 +2,17 @@
 # Allstate
 :0
 * ^From:.*allstate@service.allstate.com.*
-.Bills/Allstate/
+.Bills.Allstate/
 
 # PSNH
 :0
 * ^From:.*PSNHREQ@PSNH.COM.*
-.Bills/PSNH/
+.Bills.PSNH/
 
 # Amazon
 :0
 * (From):.*@amazon.com.*
-.Bills/Amazon/
+.Bills.Amazon/
 
 # Ting
 :0
@@ -22,21 +22,37 @@
 # American Express
 :0
 * (From):.*American Express.*
-.Bills/AmericanExpress/
+.Bills.AmericanExpress/
 
 # Github
 :0
 * ^From:.*support@github.com.*
-.Bills/github/
+.Bills.github/
 
 # Comcast
 :0
 * (From):.*online.communications@alerts.comcast.net.*
-.Bills/Comcast/
+.Bills.Comcast/
 
 # E-ZPass
 :0
 * (From):.*postmaster@e-statements.ezpassnh.com.*
-.Bills/E-ZPass/
+.Bills.E-ZPass/
+
+# Capital One
+:0
+* (From):.*capitalone@email.capitalone.com.*
+.Bills.Capital\ One/
+
+# Linode
+:0
+* (From):.*billing@linode.com.*
+.Bills.Linode/
+
+# Netflix
+:0
+* (Subject):.*Payment to Netflix.*
+.Bills.Netflix/
+
 
 # vim: filetype=procmail syntax=procmail
