--- a/procmail/home/daily.rc
+++ b/procmail/home/daily.rc
@@ -1,120 +1,157 @@
 # Allrecipes
 :0
-* (From):.*email@allrecipes.com.*
-.Daily/Allrecipes/
+* From:.*email@allrecipes.com.*
+.Daily.Allrecipes/
 
-# Morning Jolt
-:0 B:
-* Morning Jolt
-.Daily/MorningJolt/
+# O'Reilly
+:0
+* From:.*oreilly@post.oreilly.com.*
+.Daily.OReilly/
+
+:0
+* From:.morningbell@heritage.org.*
+.Daily.MorningBell/
 
 # knight.cx
 :0
-* (From):.*nobody@localhost.*
-.Daily/knightcx/
+* From:.*nobody@localhost.*
+.Daily.knightcx/
 
 :0
-* (From):.*root@knight.cx.*
-.Daily/knightcx/
+* From:.*root@knight.cx.*
+.Daily.knightcx/
 
 # IBD Editorials
 :0
-* ^From:.*investors@e.investors.com.*
-.Daily/IBDEditorials/
+* ^From:.*investors@em.investors.com.*
+.Daily.IBDEditorials/
 
 # Twitchy
 :0
 * ^From:.*updates@twitchymail.com.*
-.Daily/Twitchy/
+.Daily.Twitchy/
 
 # Todoist
 :0
-* ^(From):.*daily-digest@todoist.com.*
-.Daily/Todoist/
+* ^From:.*daily-digest@todoist.com.*
+.Daily.Todoist/
+
+# Manning
+:0
+* From:.*mkt@manning.com.*
+.Daily.Manning/
 
 # Jobs
 :0
-* ^(From):.*jagent-feedback@monster.com.*
-.Daily/Jobs/
+* ^From:.*jagent-feedback@monster.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*alert@email1-beyond.com.* | ^(From):.*alert@email2-beyond.com.* | ^(From):.*alert@email3-beyond.com.* | ^(From):.*alert@email4-beyond.com.*
-.Daily/Jobs/
+* ^From:.*alert@email1-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*JobMatch@email.*-beyond.com.*
-.Daily/Jobs/
+* ^From:.*alert@email2-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*job1@email03-employgoal.com.*
-.Daily/Jobs/
+* ^From:.*alert@email3-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*jagent@route.monster.com.*
-.Daily/Jobs/
+* ^From:.*alert@email4-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*jobalerts@jobserious.com.*
-.Daily/Jobs/
+* ^From:.*CareerResources@email4-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*balerts@site.careerbuilder.com.*
-.Daily/Jobs/
+* ^From:.*alerts@alerts.numberonejobsite.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*JobAlerts@CyberCoders.com.*
-.Daily/Jobs/
+* ^From:.*mail@candidatepoint.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*jobs@alerts.cybercoders.com.*
-.Daily/Jobs/
+* ^From:.*JobMatch@email.*-beyond.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*noreply_alerts@ziprecruiter.com.*
-.Daily/Jobs/
+* ^From:.*job1@email03-employgoal.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*jobs.simplyhired.com.*
-.Daily/Jobs/
+* ^From:.*jagent@route.monster.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*noreply@jobmonkeymail.com.*
-.Daily/Jobs/
+* ^From:.*jobalerts@jobserious.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*noreply@glassdoor.com.*
-.Daily/Jobs/
+* ^From:.*balerts@site.careerbuilder.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*marketing@itjobcafe.com.*
-.Daily/Jobs/
+* ^From:.*JobAlerts@CyberCoders.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*noreply-zr-startwire@ziprecruiter.com.*
-.Daily/Jobs/
+* ^From:.*jobs@alerts.cybercoders.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*noreply@postjobfree.com.*
-.Daily/Jobs/
+* ^From:.*noreply_alerts@ziprecruiter.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*alerts@jobsreport.com.*
-.Daily/Jobs/
+* ^From:.*ziprecruiter.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*jobplanner@startwire.com.*
-.Daily/Jobs/
+* ^From:.*jobs.simplyhired.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*info@jobdiagnosis.com.*
-.Daily/Jobs/
+* ^From:.*noreply@jobmonkeymail.com.*
+.Daily.Jobs/
 
 :0
-* ^(From):.*alert@startwire.com.*| ^(From):.*WindhamProfessionals@jobs.net.*
-.Daily/Jobs/
+* ^From:.*noreply@glassdoor.com.*
+.Daily.Jobs/
 
-#:0
-#* ^(From):.*WindhamProfessionals@jobs.net.*
-#.Daily/Jobs/
+:0
+* ^From:.*marketing@itjobcafe.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*noreply-zr-startwire@ziprecruiter.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*noreply@postjobfree.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*alerts@jobsreport.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*jobplanner@startwire.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*info@jobdiagnosis.com.*
+.Daily.Jobs/
+
+:0
+* ^From:.*alert@startwire.com.*| ^From:.*WindhamProfessionals@jobs.net.*
+.Daily.Jobs/
+
+:0
+* ^From:.*WindhamProfessionals@jobs.net.*
+.Daily.Jobs/
 
 # vim: filetype=procmail syntax=procmail
