--- a/procmail/home/weekly.rc
+++ b/procmail/home/weekly.rc
@@ -1,27 +1,40 @@
 # JS Weekly News
 :0
 * ^From:.*jsw@peterc.org.*
-.Weekly/JavascriptNews/
+.Weekly.JavascriptNews/
 
 # Python Weekly News
 :0
 * ^From:.*rahul@pythonweekly.com.*
-.Weekly/PythonNews/
+.Weekly.PythonNews/
+
+# pycoders
+:0
+* ^From:.*admin@pycoders.com
+.Weekly.PythonNews/
 
 # Ruby Weekly News
 :0
 * ^From:.*rw@peterc.org.*
-.Weekly/RubyNews/
+.Weekly.RubyNews/
 
-# Goldberg File
-:0 B:
-* The Goldberg File
-.Weekly/GoldbergFile/
+# Clojure Gazaette
+:0
+* ^From:.*eric@lispcast.com.*
+.Weekly.ClojureGazette/
 
 # Sublime Text
 :0
 * ^(From):.*josh@sublimetexttips.com.*
-.Weekly/Sublime\ Text/
+.Weekly.Sublime\ Text/
 
+# Elixir
+:0
+* ^(From).*elixir.radar@plataformatec.com.br.*
+.Weekly.ElixirRadar/
+
+:0
+* ^(From):.*support@wakatime.com.*
+! steven.knight@cashstar.com
 
 # vim: filetype=procmail syntax=procmail
