--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -45,6 +45,7 @@
     ~/.sqliterc: dotfiles/sqliterc
     ~/.tmux: tmux
     ~/.tmux.conf: tmux/tmux.conf
+    ~/.spf13-vim-3: spf13-vim
     ~/.vimrc: spf13-vim-3/.vimrc
     ~/.vimrc.bundles: spf13-vim-3/.vimrc.bundles
     ~/.vimrc.before: spf13-vim-3/.vimrc.before
