--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -4,9 +4,9 @@
 - clean: ['~']
 
 - shell:
-  - [git submodule update --init --recursive, 'Updating submodules']
-  - [git pull, 'Updating repo']
-  - [cd spf13-vim; sh bootstrap.sh, 'Updating vim spf13']
+    - [git submodule update --init --recursive, 'Updating submodules']
+    - [git pull, 'Updating repo']
+    - [cd spf13-vim; sh bootstrap.sh, 'Updating vim spf13']
 
 - link:
     ~/.Xresources: dotfiles/Xresources
@@ -45,10 +45,10 @@
     ~/.sqliterc: dotfiles/sqliterc
     ~/.tmux: tmux
     ~/.tmux.conf: tmux/tmux.conf
-    ~/.spf13-vim-3: spf13-vim
-    ~/.vimrc: spf13-vim-3/.vimrc
-    ~/.vimrc.bundles: spf13-vim-3/.vimrc.bundles
-    ~/.vimrc.before: spf13-vim-3/.vimrc.before
+    ~/.spf13-vim: spf13-vim
+    ~/.vimrc: spf13-vim/.vimrc
+    ~/.vimrc.bundles: spf13-vim/.vimrc.bundles
+    ~/.vimrc.before: spf13-vim/.vimrc.before
     ~/.vimrc.local: vim/vimrc.local
     ~/.vimrc.before.local: vim/vimrc.before.local
     ~/.vimrc.bundles.local: vim/vimrc.bundles.local
