--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "spf13-vim"]
 	path = spf13-vim
 	url = git@github.com:spf13/spf13-vim.git
+[submodule "powerline"]
+	path = powerline
+	url = git@github.com:powerline/powerline.git
+[submodule "smartcd"]
+	path = smartcd
+	url = git@github.com:cxreg/smartcd.git
