removed amix/vimrc

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 	path = liquidprompt
 	url = git@github.com:nojhan/liquidprompt.git
 	branch = develop
+[submodule "vimrc"]
+	path = vimrc
+	url = git@github.com:amix/vimrc.git
