--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -57,13 +57,14 @@
     ~/.sqliterc: dotfiles/sqliterc
     ~/.tmux.conf: tmux/tmux.conf
     ~/.Xresources: dotfiles/Xresources
+    ~/.vimrc: vimrc/vimrcs/basic.vim
     # ~/.vimrc: spf13-vim/.vimrc
     # ~/.vimrc.bundles: spf13-vim/.vimrc.bundles
     # ~/.vimrc.before: spf13-vim/.vimrc.before
-    ~/.vimrc.local: vim/vimrc.local
-    ~/.vimrc.before.local: vim/vimrc.before.local
-    ~/.vimrc.bundles.local: vim/vimrc.bundles.local
-    ~/.xbindkeysrc: dotfiles/xbindkeysrc
+    # ~/.vimrc.local: vim/vimrc.local
+    # /.vimrc.before.local: vim/vimrc.before.local
+    # /.vimrc.bundles.local: vim/vimrc.bundles.local
+    # /.xbindkeysrc: dotfiles/xbindkeysrc
     ~/.zlogin: zsh/zlogin.zsh
     ~/.zlogout: zsh/zlogout.zsh
     ~/.zprofile: zsh/zprofile.zsh
