--- a/procmail/home/daily.rc
+++ b/procmail/home/daily.rc
@@ -1,45 +1,45 @@
 # Allrecipes
 :0
 * From:.*email@allrecipes.com.*
-.Daily.Allrecipes/
+.Daily/ # .Allrecipes/
 
 # O'Reilly
 :0
 * From:.*oreilly@post.oreilly.com.*
-.Daily.OReilly/
+.Daily/ # .OReilly/
 
 :0
 * From:.morningbell@heritage.org.*
-.Daily.MorningBell/
+.Daily/ #/ #  .MorningBell/
 
 # knight.cx
 :0
 * From:.*nobody@localhost.*
-.Daily.knightcx/
+.Daily/ # .knightcx/
 
 :0
 * From:.*root@knight.cx.*
-.Daily.knightcx/
+.Daily/ # .knightcx/
 
 # IBD Editorials
 :0
 * ^From:.*investors@em.investors.com.*
-.Daily.IBDEditorials/
+.Daily/ # .IBDEditorials/
 
 # Twitchy
 :0
 * ^From:.*updates@twitchymail.com.*
-.Daily.Twitchy/
+.Daily/ # .Twitchy/
 
 # Todoist
 :0
 * ^From:.*daily-digest@todoist.com.*
-.Daily.Todoist/
+.Daily/ # .Todoist/
 
 # Manning
 :0
 * From:.*mkt@manning.com.*
-.Daily.Manning/
+.Daily/ # .Manning/
 
 # Jobs
 :0
