--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,12 @@ sublime-text-3/Packages/Ruby Debugger
 sublime-text-3/Packages/EasyMotion
 sublime-text-3/Packages/i3wm-sublime
 sublime-text-3/Packages/User/i_opener_history.sublime-settings
+sublime-text-3/Packages/ElixirSublime/
+sublime-text-3/Packages/Python Improved/
+sublime-text-3/Packages/User/Package Control.merged-ca-bundle
+sublime-text-3/Packages/User/Package Control.user-ca-bundle
+sublime-text-3/Packages/User/SublimeLinter/
+sublime-text-3/Packages/bz2/
 
 # GPG
 gnupg/gpg-agent.env.fish
