--- a/dotbot/linux.install.conf.yaml
+++ b/dotbot/linux.install.conf.yaml
@@ -3,5 +3,6 @@
 
 - clean: ['~']
 
-# - link:
-#
+- link:
+  # NOTE: home is /home/steven, not /home/skk
+    ~/.smartcd_config: dotfiles/smartcd_config/home
