--- a/dotbot/linux.install.conf.yaml
+++ b/dotbot/linux.install.conf.yaml
@@ -4,5 +4,5 @@
 - clean: ['~']
 
 - link:
-  # NOTE: home is /home/steven, not /home/skk
-    ~/.smartcd_config: dotfiles/smartcd_config/home
+    # NOTE: home is /home/steven, not /home/skk
+    ~/.smartcd/scripts/home: smartcd_config/home
