--- a/dotbot/linux.install.conf.yaml
+++ b/dotbot/linux.install.conf.yaml
@@ -5,4 +5,4 @@
 
 - link:
     # NOTE: home is /home/steven, not /home/skk
-    ~/.smartcd/scripts/home: smartcd_config/home
+    ~/.smartcd/scripts/home: smartcd/home
