Update to use spacemacs.d directory.

--- a/dotbot/install.conf.yaml
+++ b/dotbot/install.conf.yaml
@@ -12,7 +12,7 @@
     ~/.dotfiles: dotfiles
     ~/.hammerspoon: hammerspoon
     ~/.i3: i3
-    ~/.spacemacs: dotfiles/spacemacs
+    ~/.spacemacs.d: spacemacs.d
     ~/.tmux: tmux
     ~/.zsh: zsh
 
