Added LOG_DB_ID; remove extra LOG_DB_URLs.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -5,17 +5,12 @@
     'JENKINS_API_TOKEN': '594849a68d4911d6c39a2cb5f700c385',
     'GNUPG_BINARY': '/usr/local/bin/gpg',
     # 'GNUPG_VERBOSE': True,
-    'FEATURES': {
-        'PASSWORD_DECRYPTION': False,
-        'AWS': False,
-        'ANYBAR': True,
-    },
 
-    # 'LOG_DB_DEBUG': True,
-    # 'LOG_DB_URL': 'sqlite:///Users/steven.knight/Projects/qa/cashbot.db',
-    # 'LOG_DB_URL': 'sqlite:/:memory:',
-    'LOG_DB_URL': "mysql://cashbot:jJT!3VK14&llVP0o@localhost:3306/cashbotdb",
+    'FEATURES': {'PASSWORD_DECRYPTION': True, 'AWS': False, 'ANYBAR': True},
+
+    'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
     'LOG_DB_CONSOLE_FORMAT_STRING': '%(relativeCreated)-8d %(levelname)s %(filename)s:%(lineno)d %(module)s.%(funcName)s %(message)s',
+    'LOG_DB_URL': "mysql://cashbot:jJT!3VK14&llVP0o@localhost:3306/cashbot_v2",
 
     'IMAGEMAGICK_CONVERT_BINARY': '/usr/local/bin/convert',
     'IMAGEMAGICK_COMPARE_BINARY': '/usr/local/bin/compare',
