--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -3,17 +3,23 @@
 
     'JENKINS_USERNAME': 'sknight',
     'JENKINS_API_TOKEN': '594849a68d4911d6c39a2cb5f700c385',
+    'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
+
     'GNUPG_BINARY': '/usr/local/bin/gpg',
     # 'GNUPG_VERBOSE': True,
 
     'FEATURES': {'PASSWORD_DECRYPTION': True, 'AWS': False, 'ANYBAR': True},
 
     'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
+    # 'LOG_DB_ID': 'sqlite_memory',
+    # 'LOG_DB_ID': 'sqlite_filesystem',
     'LOG_DB_CONSOLE_FORMAT_STRING': '%(relativeCreated)-8d %(levelname)s %(filename)s:%(lineno)d %(module)s.%(funcName)s %(message)s',
+    'LOG_DB_LOG_TO_FILESYSTEM': False,
 
     'IMAGEMAGICK_CONVERT_BINARY': '/usr/local/bin/convert',
     'IMAGEMAGICK_COMPARE_BINARY': '/usr/local/bin/compare',
 
     'PRINT_TRACEBACK': True,
+    # 'LOG_DB_DEBUG': True,
     # 'CONSOLE_LOG_LEVEL': 'DEBUG',
 }
