Add ALIAS_EDIT_SUBCOMMAND_VI_MODE, update others.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -1,7 +1,8 @@
 {
+    'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
-    'CONSOLE_LOG_LEVEL': 'VERBOSE',
-    'FEATURES': {'ANYBAR': True, 'PASSWORD_DECRYPTION': True},
+    'CONSOLE_LOG_LEVEL': 'INFO',
+    'FEATURES': {'ALIASES': True, 'ANYBAR': True, 'PASSWORD_DECRYPTION': True},
     'GNUPG_BINARY': '/usr/local/bin/gpg',
     'IMAGEMAGICK_COMPARE_BINARY': '/usr/local/bin/compare',
     'IMAGEMAGICK_CONVERT_BINARY': '/usr/local/bin/convert',
@@ -10,5 +11,5 @@
     'LOG_DB_CONSOLE_FORMAT_STRING': '%(relativeCreated)-8d %(levelname)s %(filename)s:%(lineno)d %(module)s.%(funcName)s %(message)s',
     'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
     'PRINT_TRACEBACK': True,
-    'REPORT_RECIPIENTS': 'steven.knight@cashstar.com',
+    'REPORT_RECIPIENTS': 'steven.knight+CASHBOT@cashstar.com',
 }
