--- a/dotbot/work.install.conf.yaml
+++ b/dotbot/work.install.conf.yaml
@@ -6,3 +6,5 @@
 - link:
     ~/.gitconfig: dotfiles/gitconfig.WORK
     ~/.hgrc: dotfiles/hgrc.WORK
+    ~/.cashbot.cfg: dotfiles/cashbot.cfg
+    ~/.cashbot.aliases: dotfiles/cashbot.aliases
