Switch to zlug from antigen framework.

--- a/dotbot/install.conf.yaml
+++ b/dotbot/install.conf.yaml
@@ -15,6 +15,7 @@
     ~/.spacemacs.d: spacemacs.d
     ~/.tmux: tmux
     ~/.zsh: zsh
+    ~/.zplug: zplug
 
     # src directories
     ~/.vimrc: ../vimrc/vimrcs/basic.vim
