Add new config items.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -1,6 +1,8 @@
 {
+    'ALIASFILE_KEYS': {'USER': False, 'specfiles': True},
     'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
+    'CASHBOT_APPDATA_DIR': '/Users/steven.knight/Documents/cashbot_output',
     'CONSOLE_LOG_LEVEL': 'INFO',
     'FEATURES': {'ALIASES': True, 'ANYBAR': True, 'PASSWORD_DECRYPTION': True},
     'GNUPG_BINARY': '/usr/local/bin/gpg',
@@ -10,6 +12,8 @@
     'JENKINS_USERNAME': 'sknight',
     'LOG_DB_CONSOLE_FORMAT_STRING': '%(relativeCreated)-8d %(levelname)s %(filename)s:%(lineno)d %(module)s.%(funcName)s %(message)s',
     'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
+    'OPEN_FOLDER': True,
+    'OPEN_URL_IN_BROWSER': False,
     'PRINT_TRACEBACK': True,
     'REPORT_RECIPIENTS': 'steven.knight+CASHBOT@cashstar.com',
 }
