Add config for OPTPARSER settings.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -1,10 +1,15 @@
 {
-    'ALIASFILE_KEYS': {'USER': False, 'specfiles': True},
+    'ALIASFILE_KEYS': {'USER': True, 'command_abbreviation': True},
     'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
     'CASHBOT_APPDATA_DIR': '/Users/steven.knight/Documents/cashbot_output',
     'CONSOLE_LOG_LEVEL': 'INFO',
-    'FEATURES': {'ALIASES': True, 'ANYBAR': True, 'PASSWORD_DECRYPTION': True},
+    'FEATURES': {
+        'ALIASES': True,
+        'ANYBAR': True,
+        'AWS': False,
+        'PASSWORD_DECRYPTION': True,
+    },
     'GNUPG_BINARY': '/usr/local/bin/gpg',
     'IMAGEMAGICK_COMPARE_BINARY': '/usr/local/bin/compare',
     'IMAGEMAGICK_CONVERT_BINARY': '/usr/local/bin/convert',
@@ -14,6 +19,11 @@
     'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
     'OPEN_FOLDER': True,
     'OPEN_URL_IN_BROWSER': False,
+    'OPTPARSER_COMPACT_COLOR_HELP_FORMATTER_THEME': 'dark',
+    'OPTPARSER_FORMATTER_CLASS_NAME': 'CompactColorHelpFormatter',
+    'OPTPARSER_FORMATTER_SETTINGS': {
+        'CompactColorHelpFormatter': {'width': 100},
+    },
     'PRINT_TRACEBACK': True,
     'REPORT_RECIPIENTS': 'steven.knight+CASHBOT@cashstar.com',
 }
