Switch VERBOSE and increase line-width for dev.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -3,7 +3,7 @@
     'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
     'CASHBOT_APPDATA_DIR': '/Users/steven.knight/Documents/cashbot_output',
-    'CONSOLE_LOG_LEVEL': 'INFO',
+    'CONSOLE_LOG_LEVEL': 'VERBOSE',
     'FEATURES': {
         'ALIASES': True,
         'ANYBAR': True,
@@ -22,7 +22,7 @@
     'OPTPARSER_COMPACT_COLOR_HELP_FORMATTER_THEME': 'dark',
     'OPTPARSER_FORMATTER_CLASS_NAME': 'CompactColorHelpFormatter',
     'OPTPARSER_FORMATTER_SETTINGS': {
-        'CompactColorHelpFormatter': {'width': 100},
+        'CompactColorHelpFormatter': {'width': 120},
     },
     'PRINT_TRACEBACK': True,
     'REPORT_RECIPIENTS': 'steven.knight+CASHBOT@cashstar.com',
