--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -1,9 +1,13 @@
 {
-    'ALIASFILE_KEYS': {'USER': True, 'command_abbreviation': True},
+    'ALIASFILE_KEYS': {
+        'USER': True,
+        'command_abbreviation': True,
+        'specfiles': True,
+    },
     'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
     'CASHBOT_APPDATA_DIR': '/Users/steven.knight/Documents/cashbot_output',
-    'CONSOLE_LOG_LEVEL': 'VERBOSE',
+    'CONSOLE_LOG_LEVEL': 'INFO',
     'FEATURES': {
         'ALIASES': True,
         'ANYBAR': True,
@@ -19,8 +23,7 @@
     'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
     'OPEN_FOLDER': True,
     'OPEN_URL_IN_BROWSER': False,
-    'OPTPARSER_COMPACT_COLOR_HELP_FORMATTER_THEME': 'dark',
-    'OPTPARSER_FORMATTER_CLASS_NAME': 'CompactColorHelpFormatter',
+    'CONSOLE_OUTPUT_THEME': 'dark',
     'OPTPARSER_FORMATTER_SETTINGS': {
         'CompactColorHelpFormatter': {'width': 120},
     },
