Update LOG_DB_ID to match changes to cashbot.

--- a/dotfiles/cashbot.cfg
+++ b/dotfiles/cashbot.cfg
@@ -7,7 +7,7 @@
     'ALIAS_EDIT_SUBCOMMAND_VI_MODE': True,
     'BROWSERSTACK_CREDENTIAL_FILE': 'browserstack_stevenknight',
     'CASHBOT_APPDATA_DIR': '/Users/steven.knight/Documents/cashbot_output',
-    'CONSOLE_LOG_LEVEL': 'INFO',
+    'CONSOLE_OUTPUT_THEME': 'dark',
     'FEATURES': {
         'ALIASES': True,
         'ANYBAR': True,
@@ -20,12 +20,11 @@
     'JENKINS_API_TOKEN': '594849a68d4911d6c39a2cb5f700c385',
     'JENKINS_USERNAME': 'sknight',
     'LOG_DB_CONSOLE_FORMAT_STRING': '%(relativeCreated)-8d %(levelname)s %(filename)s:%(lineno)d %(module)s.%(funcName)s %(message)s',
-    'LOG_DB_ID': 'mysql_steven_knight_cashbot_v2',
+    'LOG_DB_ID': 'mysql_steven_knight_cashbot',
     'OPEN_FOLDER': True,
-    'OPEN_URL_IN_BROWSER': False,
-    'CONSOLE_OUTPUT_THEME': 'dark',
+    'OPEN_URL_IN_BROWSER': True,
     'OPTPARSER_FORMATTER_SETTINGS': {
-        'CompactColorHelpFormatter': {'width': 120},
+                                    'CompactColorHelpFormatter': {'width': 120},
     },
     'PRINT_TRACEBACK': True,
     'REPORT_RECIPIENTS': 'steven.knight+CASHBOT@cashstar.com',
