--- a/.gitmodules
+++ b/.gitmodules
@@ -29,6 +29,7 @@
 [submodule "zplug"]
 	path = zplug
 	url = git@github.com:zplug/zplug.git
+  ignore = dirty
 [submodule "dircolors-solarized"]
 	path = dircolors-solarized
 	url = git@github.com:seebi/dircolors-solarized.git
