Store smarted scripts in scripts dir.

--- a/dotbot/install.conf.yaml
+++ b/dotbot/install.conf.yaml
@@ -5,7 +5,8 @@
 
 - shell:
     - [git pull, 'Updating repo']
-    - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init, 'Installing submodules']
+    - [mkdir .smartcd/scripts, 'Creating smartcd/scripts dir']
 
 - link:
     # directories
