split work and home files into work.{osx,linux} and home.{linux}

--- a/dotbot/work.install.conf.yaml
+++ b/dotbot/work.install.conf.yaml
@@ -8,3 +8,4 @@
     ~/.hgrc: dotfiles/hgrc.WORK
     ~/.cashbot.cfg: dotfiles/cashbot.cfg
     ~/.cashbot.aliases: dotfiles/cashbot.aliases
+    ~/.smartcd/scripts/home: smartcd/home
