--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,8 @@ set -g @tpm_plugins "            \
 # initializes TMUX plugin manager
 run-shell ~/.tmux/plugins/tpm/tpm
 
+set-option -g history-limit 3000
+
 ###########################
 # Status Bar
 ###########################
@@ -56,4 +58,3 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
-
