--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,7 @@ set -g @tpm_plugins "            \
   tmux-plugins/tmux-sensible     \
   tmux-plugins/tmux-pain-control \
   tmux-plugins/tmux-resurrect    \
+  tmux-plugins/tmux-yank \
 "
 
 # initializes TMUX plugin manager
@@ -58,3 +59,6 @@ set -g pane-border-fg colour235
 set -g pane-border-bg black
 set -g pane-active-border-fg green
 set -g pane-active-border-bg black
+
+set -g mouse on
+
