--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,3 +62,5 @@ set -g pane-active-border-bg black
 
 set -g mouse on
 
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
